Add Tailwind CSS integration and remove SASS styles
- Introduced Tailwind CSS by adding index.css and tailwind.config.js.
- Linked index.css in index.html for styling.
- Removed SASS files (App.scss, Hero.scss, and variables) and their imports from components.
- Updated Hero component to use Tailwind classes for styling.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="twitter:title" content="Electra">
     <meta name="twitter:description" content="Electra - A modern and innovative platform for your digital needs">
     <title>Electra - Modern Digital Solutions</title>
+
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
