Add .gitignore, update index.html and styles.css, and add favicon.ico
- Created .gitignore to exclude environment files, build artifacts, and IDE configurations.
- Updated index.html to replace the button icon SVG for improved design.
- Refined styles.css by enhancing font rendering and adjusting letter-spacing for better typography.
- Added favicon.ico for branding in the browser tab.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 </div>
                 <button class="button-icon-base" type="button">
                     <span>Scopri Electra</span>
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-                        <path d="M12 8V13M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22ZM11.995 16H12.004" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                        <path d="M10 4.16669V15.8334M10 15.8334L15.8333 10M10 15.8334L4.16667 10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </button>
             </div>
