--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
     <!-- Main Content -->
     <main id="main-content">
         <section id="hero" class="section-hero" aria-labelledby="hero-title">
+            <img 
+                src="public/images/hero-background.jpg" 
+                alt="" 
+                class="hero-background" 
+                aria-hidden="true"
+                width="1920"
+                height="1080"
+                loading="eager"
+            >
             <!-- Header -->
             <header class="main-header" role="banner">
                 <a href="/" class="logo" aria-label="Electra Homepage">
@@ -117,7 +126,7 @@
             <!-- Hero Content -->
             <div class="hero-content">
                 <div class="text-reveal">
-                    <h1 id="hero-title">Un alleato per i tuoi obbiettivi.</h1>
+                    <h1 id="hero-title" data-text="Un alleato per i tuoi obbiettivi.">Un alleato per i tuoi obbiettivi.</h1>
                 </div>
                 <div class="text-reveal">
                     <p>Un allenamento completo che unisce salute, forma fisica e benessere, ideale per migliorare il corpo in modo efficace e mirato.</p>
