--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="accessibility.css">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -102,8 +103,8 @@
                     <img src="public/images/electra-logo-horizontal.svg" 
                          alt="Electra Logo" 
                          class="logo-image" 
-                         width="120" 
-                         height="40"
+                         width="48" 
+                         height="48"
                          loading="eager">
                 </a>
                 <nav class="app-menu" aria-label="Main navigation">
@@ -126,7 +127,7 @@
             <!-- Hero Content -->
             <div class="hero-content">
                 <div class="text-reveal">
-                    <h1 id="hero-title" data-text="Un alleato per i tuoi obbiettivi.">Un alleato per i tuoi obbiettivi.</h1>
+                    <h1 data-text="Un alleato per i tuoi obbiettivi.">Un alleato per i tuoi obbiettivi.</h1>
                 </div>
                 <div class="text-reveal">
                     <p>Un allenamento completo che unisce salute, forma fisica e benessere, ideale per migliorare il corpo in modo efficace e mirato.</p>
@@ -141,33 +142,7 @@
         </section>
     </main>
 
-    <!-- Accessibility Styles -->
-    <style>
-        .visually-hidden:not(:focus):not(:active) {
-            clip: rect(0 0 0 0);
-            clip-path: inset(50%);
-            height: 1px;
-            overflow: hidden;
-            position: absolute;
-            white-space: nowrap;
-            width: 1px;
-        }
-        .skip-link:focus {
-            clip: auto;
-            clip-path: none;
-            height: auto;
-            width: auto;
-            background-color: var(--color-dark);
-            color: var(--color-white);
-            padding: var(--gap-normal);
-            position: fixed;
-            top: var(--gap-normal);
-            left: var(--gap-normal);
-            z-index: 100;
-            text-decoration: none;
-            border: 2px solid var(--color-white);
-            border-radius: var(--border-radius-normal);
-        }
-    </style>
+    <!-- Scripts -->
+    <script src="script.js"></script>
 </body>
 </html> 
