--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                 <div class="details-image-container">
                     <div class="details-image" aria-hidden="true">
                         <img src="public/images/details-01-image.webp" 
-                            alt="Attiva ogni singola fibra del tuo corpo" 
-                            width="100%" 
-                            height="100%">
+                            alt="Attiva ogni singola fibra del tuo corpo"
+                            width="110%" 
+                            height="110%">
                     </div>
                 </div>
                 <div class="details-content">
@@ -156,7 +156,10 @@
             <div class="details-block reverse">
                 <div class="details-image-container">
                     <div class="details-image" aria-hidden="true">
-                        <!-- Placeholder for image - to be replaced with actual image -->
+                        <img src="public/images/details-01-image.webp" 
+                            alt="Attiva ogni singola fibra del tuo corpo"
+                            width="110%" 
+                            height="110%">
                     </div>
                 </div>
                 <div class="details-content text-right">
@@ -169,7 +172,10 @@
             <div class="details-block">
                 <div class="details-image-container">
                     <div class="details-image" aria-hidden="true">
-                        <!-- Placeholder for image - to be replaced with actual image -->
+                        <img src="public/images/details-01-image.webp" 
+                            alt="Attiva ogni singola fibra del tuo corpo"
+                            width="110%" 
+                            height="110%">
                     </div>
                 </div>
                 <div class="details-content">
