--- a/index.html
+++ b/index.html
@@ -117,26 +117,27 @@
                 </a>
                 <nav class="app-menu" aria-label="Main navigation">
                     <ul role="list">
-                        <li><b><a href="#about">About</a></b></li>
-                        <li><b><a href="#try">Fai una prova</a></b></li>
-                        <li><b><a href="#about-us">Chi siamo</a></b></li>
-                        <li><b><a href="#location">Dove Siamo</a></b></li>
+                        <li><b><a href="#why">Cosa offriamo</a></b></li>
+                        <li><b><a href="#who">Chi siamo</a></b></li>
+                        <li><b><a href="#where">Dove Siamo</a></b></li>
                     </ul>
                 </nav>
-                <button class="button-icon-base" type="button">
-                    <span>Prenota un appuntamento</span>
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true" focusable="false">
-                        <path
-                            d="M8 2V5M16 2V5M3.5 9.09H20.5M21 8.5V17C21 20 19.5 22 16 22H8C4.5 22 3 20 3 17V8.5C3 5.5 4.5 3.5 8 3.5H16C19.5 3.5 21 5.5 21 8.5Z"
-                            stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        <path
-                            d="M15.695 13.7H15.704M15.695 16.7H15.704M11.995 13.7H12.004M11.995 16.7H12.004M8.29401 13.7H8.30301M8.29401 16.7H8.30301"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                </button>
-            </header>
+                <a href="#contact">
+                    <button class="button-icon-base" type="button">
+                        <span>Prenota un appuntamento</span>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true" focusable="false">
+                            <path
+                                d="M8 2V5M16 2V5M3.5 9.09H20.5M21 8.5V17C21 20 19.5 22 16 22H8C4.5 22 3 20 3 17V8.5C3 5.5 4.5 3.5 8 3.5H16C19.5 3.5 21 5.5 21 8.5Z"
+                                stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path
+                                d="M15.695 13.7H15.704M15.695 16.7H15.704M11.995 13.7H12.004M11.995 16.7H12.004M8.29401 13.7H8.30301M8.29401 16.7H8.30301"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </header>
+                </a>
 
             <!-- Hero Content -->
             <div class="hero-content">
@@ -148,14 +149,16 @@
                     <p>Un allenamento completo che unisce salute, forma fisica e benessere, ideale per migliorare il
                         corpo in modo efficace e mirato.</p>
                 </div>
-                <button class="button-icon-base" type="button">
-                    <span>Scopri Electra</span>
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true" focusable="false">
-                        <path d="M10 4.16669V15.8334M10 15.8334L15.8333 10M10 15.8334L4.16667 10" stroke="currentColor"
-                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                </button>
+                <a href="#details">
+                    <button class="button-icon-base" type="button">
+                        <span>Scopri Electra</span>
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true" focusable="false">
+                            <path d="M10 4.16669V15.8334M10 15.8334L15.8333 10M10 15.8334L4.16667 10" stroke="currentColor"
+                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -215,7 +218,7 @@
         </section>
 
         <!-- More Info Section -->
-        <section class="section-more-info parallax electra-pattern" aria-labelledby="more-info-title-1"
+        <section class="section-more-info parallax electra-pattern" aria-labelledby="more-info-title-1" id="why"
             id="more-info-1">
             <h2 id="more-info-title-1" class="visually-hidden">
                 Maggiori informazioni
@@ -281,6 +284,7 @@
                     <p>Prenota ora il tuo primo appuntamento e inizia il tuo percorso verso una versione migliore di te.
                         Con Electra, ogni allenamento è un passo avanti verso il benessere, la forma fisica e uno stile
                         di vita più sano. Non rimandare, il cambiamento inizia oggi!</p>
+                        <a href="#contact" class="button">
                     <button class="button-icon-base" type="button">
                         <span>Prenota il tuo primo appuntamento</span>
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -294,12 +298,13 @@
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </button>
+                    </a>
                 </div>
             </div>
         </section>
 
         <!-- About Us Section -->
-        <section id="about-us" class="section-about-us" aria-labelledby="about-us-title">
+        <section id="who" class="section-about-us" aria-labelledby="about-us-title">
             <h2 id="about-us-title" class="visually-hidden">
                 Su di noi
             </h2>
@@ -370,19 +375,21 @@
                     <p>Prenota ora il tuo primo appuntamento e inizia il tuo percorso verso una versione migliore di te.
                         Con Electra, ogni allenamento è un passo avanti verso il benessere, la forma fisica e uno stile
                         di vita più sano. Non rimandare, il cambiamento inizia oggi!</p>
-                    <button class="button-icon-base" type="button">
-                        <span>Prenota il tuo primo appuntamento</span>
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" focusable="false">
-                            <path
-                                d="M8 2V5M16 2V5M3.5 9.09H20.5M21 8.5V17C21 20 19.5 22 16 22H8C4.5 22 3 20 3 17V8.5C3 5.5 4.5 3.5 8 3.5H16C19.5 3.5 21 5.5 21 8.5Z"
-                                stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path
-                                d="M15.695 13.7H15.704M15.695 16.7H15.704M11.995 13.7H12.004M11.995 16.7H12.004M8.29401 13.7H8.30301M8.29401 16.7H8.30301"
-                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </button>
+                    <a href="#contact" class="button">
+                        <button class="button-icon-base" type="button">
+                            <span>Prenota il tuo primo appuntamento</span>
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                                aria-hidden="true" focusable="false">
+                                <path
+                                    d="M8 2V5M16 2V5M3.5 9.09H20.5M21 8.5V17C21 20 19.5 22 16 22H8C4.5 22 3 20 3 17V8.5C3 5.5 4.5 3.5 8 3.5H16C19.5 3.5 21 5.5 21 8.5Z"
+                                    stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M15.695 13.7H15.704M15.695 16.7H15.704M11.995 13.7H12.004M11.995 16.7H12.004M8.29401 13.7H8.30301M8.29401 16.7H8.30301"
+                                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
@@ -447,6 +454,11 @@
     <footer class="section-footer parallax electra-pattern">
 
         <div class="footer-content">
+            <div id="where">
+                <h2>Indirizzo</h2>
+                <p>Via Codeborgo 1, 6500 Bellinzona, Switzerland</p>
+            </div>
+
             <div class="footer-logo">
                 <img src="public/images/electra-logo-horizontal.svg" alt="Electra Logo" width="150" height="48">
                 <p>Via Codeborgo 1, 6500 Bellinzona, Switzerland</p>
