--- a/index.html
+++ b/index.html
@@ -460,7 +460,12 @@
         <div class="details-block">
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
-              <!-- Placeholder for image - to be replaced with actual image -->
+              <img
+                src="public/images/details-01-image.webp"
+                alt="Attiva ogni singola fibra del tuo corpo"
+                width="110%"
+                height="110%"
+              />
             </div>
           </div>
           <div class="details-content">
@@ -482,7 +487,12 @@
         <div class="details-block reverse">
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
-              <!-- Placeholder for image - to be replaced with actual image -->
+              <img
+                src="public/images/details-01-image.webp"
+                alt="Attiva ogni singola fibra del tuo corpo"
+                width="110%"
+                height="110%"
+              />
             </div>
           </div>
           <div class="details-content">
@@ -748,39 +758,7 @@
 
     <div class="credits">
       <p>
-        Website designed using Figma
-        <svg
-          width="11"
-          height="16"
-          viewBox="0 0 11 16"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M2.75016 16.0001C4.26891 16.0001 5.50016 14.7688 5.50016 13.2501V10.5001H2.75016C1.23141 10.5001 0.000156403 11.7313 0.000156403 13.2501C0.000156403 14.7688 1.23141 16.0001 2.75016 16.0001Z"
-            fill="#7474FF"
-          />
-          <path
-            d="M0.000156403 8.00006C0.000156403 6.48131 1.23141 5.25006 2.75016 5.25006H5.50016V10.7501H2.75016C1.23141 10.7501 0.000156403 9.51881 0.000156403 8.00006Z"
-            fill="#7474FF"
-          />
-          <path
-            d="M0 2.75C0 1.23125 1.23125 0 2.75 0H5.5V5.5H2.75C1.23125 5.5 0 4.26875 0 2.75Z"
-            fill="#7474FF"
-          />
-          <path
-            d="M5.5 0H8.25C9.76875 0 11 1.23125 11 2.75C11 4.26875 9.76875 5.5 8.25 5.5H5.5V0Z"
-            fill="#7474FF"
-          />
-          <path
-            d="M11 8.00006C11 9.51881 9.76875 10.7501 8.25 10.7501C6.73125 10.7501 5.5 9.51881 5.5 8.00006C5.5 6.48131 6.73125 5.25006 8.25 5.25006C9.76875 5.25006 11 6.48131 11 8.00006Z"
-            fill="#7474FF"
-          />
-        </svg>
-        and developed by Nicola Castellani
-        <a href="mailto:nicolacastellanidev@gmail.com"
-          >(nicolacastellanidev@gmail.com)</a
-        >
+        &copy; 2025 Electra Fitness. Tutti i diritti riservati.
       </p>
     </div>
     <!-- Scripts -->
