Update Open Graph and Twitter URLs to point to the correct domain

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.electrafitness.it/" />
+    <meta property="og:url" content="https://electrafitness.ch/" />
     <meta
       property="og:title"
       content="Electra - Un alleato per i tuoi obbiettivi"
@@ -34,12 +34,12 @@
     />
     <meta
       property="og:image"
-      content="https://www.electrafitness.it/public/images/og-image.jpg"
+      content="https://electrafitness.ch/public/images/og-image.jpg"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.electrafitness.it/" />
+    <meta property="twitter:url" content="https://electrafitness.ch/" />
     <meta
       property="twitter:title"
       content="Electra - Un alleato per i tuoi obbiettivi"
@@ -50,7 +50,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://www.electrafitness.it/public/images/og-image.jpg"
+      content="https://electrafitness.ch/public/images/og-image.jpg"
     />
 
     <!-- Theme and Icons -->
@@ -85,8 +85,8 @@
         "@type": "SportsClub",
         "name": "Electra Fitness",
         "description": "Un allenamento completo che unisce salute, forma fisica e benessere",
-        "image": "https://www.electrafitness.it/public/images/og-image.jpg",
-        "url": "https://www.electrafitness.it",
+        "image": "https://electrafitness.ch/public/images/og-image.jpg",
+        "url": "https://electrafitness.ch/",
         "telephone": "+39XXXXXXXXXX",
         "address": {
           "@type": "PostalAddress",
