--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         "description": "Un allenamento completo che unisce salute, forma fisica e benessere",
         "image": "https://electrafitness.ch/public/images/og-image.jpg",
         "url": "https://electrafitness.ch/",
-        "telephone": "+39XXXXXXXXXX",
+        "telephone": "+41768146571",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Your Street Address",
@@ -680,6 +680,18 @@
         </form>
       </section>
     </main>
+
+    <!-- WhatsApp Floating Button -->
+    <a href="https://api.whatsapp.com/send/?phone=41768146571&text&type=phone_number&app_absent=0" 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       aria-label="Contattaci su WhatsApp"
+       data-tooltip="Contattaci su Whatsapp">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.472 14.382C17.124 14.206 15.437 13.387 15.124 13.279C14.811 13.171 14.585 13.117 14.359 13.464C14.133 13.811 13.498 14.564 13.305 14.79C13.112 15.016 12.919 15.049 12.571 14.873C12.223 14.697 11.099 14.323 9.75 13.121C8.695 12.184 7.989 11.021 7.796 10.674C7.603 10.327 7.774 10.149 7.949 9.974C8.107 9.816 8.297 9.566 8.473 9.373C8.649 9.18 8.703 9.053 8.811 8.827C8.919 8.601 8.865 8.408 8.777 8.232C8.689 8.056 7.989 6.369 7.71 5.675C7.438 4.998 7.163 5.084 6.954 5.073C6.756 5.063 6.53 5.061 6.304 5.061C6.078 5.061 5.697 5.149 5.384 5.496C5.071 5.843 4.184 6.662 4.184 8.349C4.184 10.036 5.417 11.657 5.593 11.883C5.769 12.109 7.989 15.445 11.357 16.948C12.2 17.341 12.857 17.589 13.368 17.77C14.214 18.039 14.986 18.002 15.591 17.912C16.26 17.812 17.472 17.078 17.751 16.277C18.03 15.476 18.03 14.795 17.942 14.619C17.854 14.443 17.628 14.355 17.28 14.179L17.472 14.382ZM12.012 21.996C10.19 21.996 8.404 21.506 6.845 20.582L6.445 20.355L2.78 21.357L3.798 17.805L3.548 17.391C2.557 15.803 2.026 13.956 2.026 12.006C2.026 6.486 6.495 2.016 12.015 2.016C14.688 2.016 17.202 3.117 19.066 4.982C20.931 6.847 22.031 9.361 22.03 12.034C22.03 17.554 17.561 22.024 12.041 22.024L12.012 21.996Z" fill="currentColor"/>
+      </svg>
+    </a>
 
     <!-- Footer -->
     <footer class="section-footer parallax electra-pattern">
