Improvements and fixes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <header class="main-header" role="banner">
           <a href="/" class="logo" aria-label="Electra Homepage">
             <img
-              src="public/images/electra-logo-horizontal-black.svg"
+              src="public/images/electra-logo-horizontal-black.png"
               alt="Electra Logo"
               class="logo-image"
               width="48"
@@ -418,7 +418,7 @@
             </p>
             <a href="#contact" class="button">
               <button class="button-icon-base" type="button">
-                <span>Prenota il tuo primo appuntamento</span>
+                <span>Prenota ora</span>
                 <svg
                   width="20"
                   height="20"
@@ -559,7 +559,7 @@
             </p>
             <a href="#contact" class="button">
               <button class="button-icon-base" type="button">
-                <span>Prenota il tuo primo appuntamento</span>
+                <span>Prenota ora</span>
                 <svg
                   width="20"
                   height="20"
@@ -702,7 +702,7 @@
 
         <div class="footer-logo">
           <img
-            src="public/images/electra-logo-horizontal-black.svg"
+            src="public/images/electra-logo-horizontal-black.png"
             alt="Electra Logo"
             class="logo-image"
             width="48"
@@ -710,6 +710,7 @@
             loading="eager"
           />
           <p>Via Codeborgo 1, 6500 Bellinzona, Switzerland</p>
+          <p>Via Vincenzo Vela 5, 6600 Locarno, Switzerland</p>
           <div class="social-links">
             <a
               href="https://instagram.com/electra_fitness_ch"
