--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-
       gtag('config', 'G-NB6B091SP0');
     </script>
     <!-- End Google Analytics -->
@@ -265,7 +264,7 @@
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
               <img
-                src="public/images/details-01-image.webp"
+                src="public/images/image-00.webp"
                 alt="Attiva ogni singola fibra del tuo corpo"
                 width="110%"
                 height="110%"
@@ -289,7 +288,7 @@
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
               <img
-                src="public/images/details-01-image.webp"
+                src="public/images/image-01.webp"
                 alt="Attiva ogni singola fibra del tuo corpo"
                 width="110%"
                 height="110%"
@@ -315,8 +314,9 @@
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
               <img
-                src="public/images/details-01-image.webp"
+                src="public/images/image-02.webp"
                 alt="Attiva ogni singola fibra del tuo corpo"
+                style="object-position: right;"
                 width="110%"
                 height="110%"
               />
@@ -477,7 +477,7 @@
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
               <img
-                src="public/images/details-01-image.webp"
+                src="public/images/image-03.webp"
                 alt="Attiva ogni singola fibra del tuo corpo"
                 width="110%"
                 height="110%"
@@ -504,7 +504,7 @@
           <div class="details-image-container">
             <div class="details-image" aria-hidden="true">
               <img
-                src="public/images/details-01-image.webp"
+                src="public/images/image-04.webp"
                 alt="Attiva ogni singola fibra del tuo corpo"
                 width="110%"
                 height="110%"
