feat: add Giubiasco location to map and update styles for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -753,6 +753,10 @@
                 <span class="location-name">Locarno</span>
                 <span class="location-address">Via Vincenzo Vela 5</span>
               </button>
+              <button class="location-tab" data-location="giubiasco">
+                <span class="location-name">Giubiasco</span>
+                <span class="location-address">Viale stazione 3c</span>
+              </button>
             </div>
 
             <div class="map-container">
@@ -843,7 +847,7 @@
 
     <div class="credits">
       <p>&copy; 2025 Electra Fitness. Tutti i diritti riservati. | 
-        <a href="#privacy-policy" id="privacy-policy-link" style="color: #5FE3FF;">Privacy Policy</a> | 
+        <a href="#privacy-policy" id="privacy-policy-link">Privacy Policy</a> | 
         <button id="manage-cookies" onclick="showCookiePreferences()" style="background: none; border: none; color: #5FE3FF; cursor: pointer; text-decoration: underline; font-family: Lora serif; font-size: 0.8rem;">Gestisci Cookie</button>
       </p>
     </div>
