--- a/index.html
+++ b/index.html
@@ -132,7 +132,24 @@
         ]
       }
     </script>
-    <!-- Google Analytics -->
+    <!-- Google Analytics with Consent Mode -->
+    <script>
+      // Define dataLayer and the gtag function
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      // Set default consent to 'denied' as a placeholder
+      gtag("consent", "default", {
+        ad_storage: "denied",
+        ad_user_data: "denied",
+        ad_personalization: "denied",
+        analytics_storage: "denied",
+        wait_for_update: 500,
+      });
+    </script>
+    <!-- Google tag (gtag.js) - Load after consent setup -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-59Q0PPB1SY"
@@ -142,8 +159,8 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
 
+      gtag("js", new Date());
       gtag("config", "G-59Q0PPB1SY");
     </script>
     <!-- End Google Analytics -->
